IKASAN-2640 sorting out some unit tests that were not firing and upgrading maven.